k8s/server/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      port: 8080
      targetPort: http
