k8s/server/server.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opswarden-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: api.opswarden.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  name: http
  tls:
    - hosts:
        - api.opswarden.dev
      secretName: opswarden-api-tls
